--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="shop-button" >SHOP NOW</button>
             </div>
             <div class="model-image">
-            <img src="homepagemodel.png" alt="model"  width="300">
+            <img src="homepagemodel.PNG" alt="model"  width="300">
             </div>
       
         </div>
