Add emoji to Student Discounts heading

--- a/student discount/discount.html
+++ b/student discount/discount.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="discount-page">
-        <h1>Student Discounts </h1>
+        <h1>Student Discounts 🎓 </h1>
         <p>Get 10% off with a college ID or email.</p>
         <form class="proof">
             <input type="text" name="email" value="Enter your college email">
